src/worker/jobs/index_version_downloads_archive/snapshots/crates_io__worker__jobs__index_version_downloads_archive__tests__generate_empty.snap
---
source: src/worker/jobs/index_version_downloads_archive/mod.rs
expression: "std::str::from_utf8(&index)?"
---
<!DOCTYPE HTML>
<html>
    <head>
        <meta charset="utf-8">
        <title>crates.io version download archives</title>
    </head>
    <body>
        <h1>crates.io version download archives</h1>

        <table>
            <tbody>
                
            </tbody>
        </table>
    </body>
</html>
