src/worker/jobs/index_version_downloads_archive/snapshots/crates_io__worker__jobs__index_version_downloads_archive__tests__generate_html.snap
---
source: src/worker/jobs/index_version_downloads_archive/mod.rs
expression: "std::str::from_utf8(&index)?"
---
<!DOCTYPE HTML>
<html>
    <head>
        <meta charset="utf-8">
        <title>crates.io version download archives</title>
    </head>
    <body>
        <h1>crates.io version download archives</h1>

        <p>
            This archive contains how many time a version of a crate was downloaded.
            Each CSV file has two columns: the <code>version_id</code> and the number of downloads.
            <br>
            The <code>version_id</code> is the <code>id</code> column of the <code>versions</code>
            table in the database.
            You can download the latest database dump by following the instructions
            <a href="https://crates.io/data-access#database-dumps">here</a>.
        </p>

        <p>
            This index is also available <a href="index.json">in JSON form</a>.
        </p>

        <table>
            <thead>
                <tr>
                    <th>File</th>
                    <th style="padding-left: 1em">Size</th>
                </tr>
            </thead>
            <tbody>
                
                    <tr>
                        <td><a href="2024-08-01.csv">2024-08-01.csv</a></td>
                        <td style="padding-left: 1em; text-align: right">138</td>
                    </tr>
                
                    <tr>
                        <td><a href="2024-07-31.csv">2024-07-31.csv</a></td>
                        <td style="padding-left: 1em; text-align: right">123</td>
                    </tr>
                
                    <tr>
                        <td><a href="2024-07-30.csv">2024-07-30.csv</a></td>
                        <td style="padding-left: 1em; text-align: right">124</td>
                    </tr>
                
                    <tr>
                        <td><a href="2024-07-29.csv">2024-07-29.csv</a></td>
                        <td style="padding-left: 1em; text-align: right">234</td>
                    </tr>
                
            </tbody>
        </table>
    </body>
</html>
